edit html foto coach

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="home-overlay">
             <div class="home-content">
                 <h1>
-                     <span style="color: var(--accent-cyan);">ENTRENAMIENTO</span> DE FUERZA<br>
+                    <span style="color: var(--accent-cyan);">ENTRENAMIENTO</span> DE FUERZA<br>
                     Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
                 </h1>
 
@@ -60,28 +60,30 @@
                 corporal, máquinas y diversos elementos, ajustando la progresión a tu nivel real.
             </p>
 
-            <div class="grid-2-cols" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; align-items: center;">
-    
-    <div>
-        <ul style="list-style: none; padding: 0;">
-            <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
-                <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
-                <p style="margin: 0;">Fuerza, potencia, coordinación, estabilidad y flexibilidad como ejes principales.</p>
-            </li>
-            <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
-                <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
-                <p style="margin: 0;">Trabajo con peso corporal, máquinas y elementos (bandas, pelotas, kettlebells).</p>
-            </li>
-        </ul>
-    </div>
+            <div class="grid-2-cols"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; align-items: center;">
 
-    <div style="height: 300px; width: 100%; position: relative;">
-        <img src="assets/img/ejercicio-entrenamiento.jpg" 
-             alt="Entrenamiento Funcional con elementos" 
-             style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
-    </div>
+                <div>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
+                            <p style="margin: 0;">Fuerza, potencia, coordinación, estabilidad y flexibilidad como ejes
+                                principales.</p>
+                        </li>
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
+                            <p style="margin: 0;">Trabajo con peso corporal, máquinas y elementos (bandas, pelotas,
+                                kettlebells).</p>
+                        </li>
+                    </ul>
+                </div>
 
-</div>
+                <div style="height: 300px; width: 100%; position: relative;">
+                    <img src="assets/img/ejercicio-entrenamiento.jpg" alt="Entrenamiento Funcional con elementos"
+                        style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
+                </div>
+
+            </div>
         </div>
     </section>
 
@@ -208,11 +210,11 @@
         <div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap;">
             <div style="width: 300px;">
                 <div
-                    style="width: 150px; height: 150px; background: #333; border-radius: 50%; margin: 0 auto 20px auto; overflow: hidden;">
-                    <img src="tu-foto-coach.jpg" alt="Coach"
-                        style="width: 100%; height: 100%; object-fit: cover; opacity: 0.5;">
+                    style="width: 150px; height: 150px; background: #333; border-radius: 50%; margin: 0 auto 20px auto; overflow: hidden; border: 2px solid var(--accent-cyan);">
+                    <img src="assets/img/photo-coach.png" alt="Coach How To Train"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
-                <h3>Nombre Coach</h3>
+                <h3 style="color: #fff; margin-bottom: 5px;">Nombre Coach</h3>
                 <p style="font-size: 0.9rem; color: #aaa;">Especialista en Biomecánica y Rehabilitación.</p>
             </div>
         </div>
