edit html nombre coach

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <img src="assets/img/photo-coach.png" alt="Coach How To Train"
                         style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
-                <h3 style="color: #fff; margin-bottom: 5px;">Nombre Coach</h3>
+                <h3 style="color: #fff; margin-bottom: 5px;">ROMAN GUERRERO</h3>
                 <p style="font-size: 0.9rem; color: #aaa;">Especialista en Biomecánica y Rehabilitación.</p>
             </div>
         </div>
