edit html nombre coach

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <section id="sobre-nosotros" style="padding: 80px 20px; background-color: var(--bg-card); text-align: center;">
         <h2 class="section-title">Quiénes estamos detrás de How To Train</h2>
-        <p style="max-width: 700px; margin: 0 auto 40px auto;">Entrenadores especializados en movimiento, salud y
+        <p style="max-width: 700px; margin: 0 auto 40px auto;">Entrenador especializado en movimiento, salud y
             rendimiento.</p>
 
         <div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap;">
