edit html nombre coach

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
     <section id="resultados" style="padding: 80px 20px; background-color: var(--bg-color);">
         <div class="container" style="max-width: 1000px; margin: 0 auto;">
             <h2 class="section-title">Resultados que podés esperar</h2>
-            <p style="text-align: center; margin-bottom: 40px;">Nuestro sistema apunta a que te muevas mejor, con menos
-                dolor y más control.</p>
+            <p style="text-align: center; margin-bottom: 40px;">Nuestro sistema apunta a que te muevas mejor, sin dolor y más control.</p>
 
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
                 <ul style="list-style: none; padding: 0;">
