edit html para quien

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 
             <div class="target-box">
                 <ul>
-                    <li>👉 Personas con <strong>dolores recurrentes</strong> que quieren volver a entrenar con seguridad.</li>
-                    <li>👉 Quienes sienten que su cuerpo "no responde" (falta de fuerza/agilidad).</li>
-                    <li>👉 Deportistas recreativos que quieren mejorar rendimiento y postura.</li>
-                    <li>👉 Personas que desean mejorar su composición corporal.</li>
+                    <li>👉 Personas con <strong>dolores articulares/musculares</strong> que desean recuperarse y volver a entrenar.</li>
+                    <li>👉 Quienes sienten que su cuerpo "no responde" o esta estancado.</li>
+                    <li>👉 Deportistas amateurs y profesionales que busquen optimizar su rendimiento y recuperación.</li>
+                    <li>👉 Personas que desean bajar el % de grasa corporal y/o aumentar la masa muscular (hipertrofia).</li>
                 </ul>
                 <p class="small-note">Cada plan es individualizado y adaptado a necesidades específicas.</p>
             </div>
