edit html para quien

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <li>👉 Personas con <strong>dolores articulares/musculares</strong> que desean recuperarse y volver a entrenar.</li>
                     <li>👉 Quienes sienten que su cuerpo "no responde" o esta estancado.</li>
                     <li>👉 Deportistas amateurs y profesionales que busquen optimizar su rendimiento y recuperación.</li>
-                    <li>👉 Personas que desean bajar el % de grasa corporal y/o aumentar la masa muscular (hipertrofia).</li>
+                    <li>👉 Personas que desean bajar el % de grasa corporal y/o aumentar la masa muscular (Hipertrofia).</li>
                 </ul>
                 <p class="small-note">Cada plan es individualizado y adaptado a necesidades específicas.</p>
             </div>
